diesel_compile_tests/tests/fail/insert_from_select_cant_be_used_with_tuples_or_arrays.stderr
error[E0277]: the trait bound `users::table: UndecoratedInsertRecord<posts::table>` is not satisfied
  --> tests/fail/insert_from_select_cant_be_used_with_tuples_or_arrays.rs:34:10
   |
34 |         .values(vec![users, users]);
   |          ^^^^^^ the trait `UndecoratedInsertRecord<posts::table>` is not implemented for `users::table`
   |
   = help: the following other types implement trait `UndecoratedInsertRecord<Table>`:
             <&'a T as UndecoratedInsertRecord<Tab>>
             <(T0, T1) as UndecoratedInsertRecord<Tab>>
             <(T0, T1, T2) as UndecoratedInsertRecord<Tab>>
             <(T0, T1, T2, T3) as UndecoratedInsertRecord<Tab>>
             <(T0, T1, T2, T3, T4) as UndecoratedInsertRecord<Tab>>
             <(T0, T1, T2, T3, T4, T5) as UndecoratedInsertRecord<Tab>>
             <(T0, T1, T2, T3, T4, T5, T6) as UndecoratedInsertRecord<Tab>>
             <(T0, T1, T2, T3, T4, T5, T6, T7) as UndecoratedInsertRecord<Tab>>
           and $N others
   = note: required for `Vec<users::table>` to implement `diesel::Insertable<posts::table>`

error[E0271]: type mismatch resolving `<table as Insertable<table>>::Values == ValuesClause<_, table>`
  --> tests/fail/insert_from_select_cant_be_used_with_tuples_or_arrays.rs:37:10
   |
37 |         .values((users, users));
   |          ^^^^^^ expected struct `InsertFromSelect`, found struct `ValuesClause`
   |
   = note: expected struct `InsertFromSelect<SelectStatement<FromClause<table>>, (user_id, title, body)>`
              found struct `diesel::query_builder::insert_statement::ValuesClause<_, posts::table>`
   = note: required for `(users::table, users::table)` to implement `diesel::Insertable<posts::table>`

error[E0271]: type mismatch resolving `<table as Insertable<table>>::Values == ValuesClause<_, table>`
  --> tests/fail/insert_from_select_cant_be_used_with_tuples_or_arrays.rs:37:17
   |
37 |         .values((users, users));
   |          ------ ^^^^^^^^^^^^^^ expected struct `ValuesClause`, found struct `InsertFromSelect`
   |          |
   |          required by a bound introduced by this call
   |
   = note: expected struct `diesel::query_builder::insert_statement::ValuesClause<_, posts::table>`
              found struct `InsertFromSelect<SelectStatement<FromClause<table>>, (user_id, title, body)>`
   = note: required for `(users::table, users::table)` to implement `diesel::Insertable<posts::table>`
note: required by a bound in `IncompleteInsertStatement::<T, Op>::values`
  --> $DIESEL/src/query_builder/insert_statement/mod.rs
   |
   |         U: Insertable<T>,
   |            ^^^^^^^^^^^^^ required by this bound in `IncompleteInsertStatement::<T, Op>::values`
